# kernel

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_CN.md  HEARTBEAT.md  LICENSE  README.md  README_CN.md  SOUL.md  SOUL_example.md  VOICE_IMPLEMENTATION.md  config.example.toml  kids_tetris.py  plan.md  pyproject.toml
deploy/: kernel.service  setup.sh
kernel/: __init__.py  __main__.py  agent.py  agent_chat.py  agent_content.py  agent_history.py  agent_sessions.py  agent_titles.py  agent_tools.py  bot.py  bot_cleanup.py  bot_logging.py  config.py  config_load.py  config_types.py  render.py  tg_commands_memory.py  tg_commands_sessions.py  tg_commands_settings.py  tg_common.py  tg_message.py  tg_message_utils.py
kernel/cli/: __init__.py  base.py  claude_code.py  codex.py
kernel/mcp/: __init__.py  client.py
kernel/memory/: __init__.py  memories.py  schema.py  slim.py  store.py
kernel/models/: __init__.py  base.py  claude.py  openai_compat.py
kernel/tools/: __init__.py  registry.py
kernel/voice/: __init__.py  stt.py  tts.py
