[project]
name = "kernel"
version = "0.1.0"
description = "Personal AI assistant on Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21,<22",
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "apscheduler>=3.10,<4",
    "mistune>=3,<4",
    "tomli>=2,<3;python_version<'3.12'",
    "tomli-w>=1,<2",
    "tzdata>=2024.1",
    "aiosqlite>=0.20,<1",
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
